// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verbose output into console verbose output 1`] = `
"
 html-bundler-webpack-plugin  Entry processing 

 ENTRY  index.html 
source: src/views/home/index.html
output: dist/
assets:
         style: src/styles/style.css
             -> css/style.bundle.css
                resource: ~fixtures/fonts/dummy/font-01.woff2
                       -> ../assets/fonts/font-01.woff2
                resource: ~fixtures/fonts/dummy/font-02.woff2
                       -> ../assets/fonts/font-02.woff2
        inline: src/styles/inlined.css?inline
                resource: ~fixtures/images/pear.png
                       -> assets/img/pear.6b9b072a.png
                  inline: ~fixtures/images/icons/iphone.png
                  inline: ~fixtures/images/icons/imac.svg
                resource: ~fixtures/images/plum.png
                       -> assets/img/plum.d39e7174.png
         style: src/views/home/style.css
             -> css/style.bundle.1.css
                resource: ~fixtures/images/kiwi.png
                       -> ../assets/img/kiwi.da3e3cc9.png
                  inline: ~fixtures/images/icons/iphone.png
      resource: ~fixtures/images/apple.png
             -> assets/img/apple.02a7c382.png
      resource: ~fixtures/images/image.webp
             -> assets/img/image-160w.webp
        inline: ~fixtures/images/icons/imac.svg
        inline: ~fixtures/images/icons/iphone.png
        inline: ~fixtures/images/home.svg
        inline: ~fixtures/images/stern.svg
        script: src/views/home/home.js
             -> js/home.bundle.js

 ENTRY  lang/de/index.html 
source: src/views/home/index.html
output: dist/
assets:
         style: src/styles/style.css
             -> ../../css/style.bundle.css
                resource: ~fixtures/fonts/dummy/font-01.woff2
                       -> ../assets/fonts/font-01.woff2
                resource: ~fixtures/fonts/dummy/font-02.woff2
                       -> ../assets/fonts/font-02.woff2
        inline: src/styles/inlined.css?inline
                resource: ~fixtures/images/pear.png
                       -> ../../assets/img/pear.6b9b072a.png
                  inline: ~fixtures/images/icons/iphone.png
                  inline: ~fixtures/images/icons/imac.svg
                resource: ~fixtures/images/plum.png
                       -> ../../assets/img/plum.d39e7174.png
         style: src/views/home/style.css
             -> ../../css/style.bundle.1.css
                resource: ~fixtures/images/kiwi.png
                       -> ../assets/img/kiwi.da3e3cc9.png
                  inline: ~fixtures/images/icons/iphone.png
      resource: ~fixtures/images/apple.png
             -> ../../assets/img/apple.02a7c382.png
      resource: ~fixtures/images/image.webp
             -> ../../assets/img/image-160w.webp
        inline: ~fixtures/images/icons/imac.svg
        inline: ~fixtures/images/icons/iphone.png
        inline: ~fixtures/images/home.svg
        inline: ~fixtures/images/stern.svg
        script: src/views/home/home.js
             -> ../../js/home.bundle.js

 ENTRY  pages/about.html 
source: src/views/about/index.html
output: dist/
assets:
         style: @test-fixtures/scss/dist/fixture-styles.css
             -> ../css/fixture-styles.bundle.css
                resource: @test-fixtures/scss/fixture-images/fixture-image-bg.png
                       -> ../assets/img/fixture-image-bg.697ef306.png
         style: src/styles/style.css
             -> ../css/style.bundle.css
                resource: ~fixtures/fonts/dummy/font-01.woff2
                       -> ../assets/fonts/font-01.woff2
                resource: ~fixtures/fonts/dummy/font-02.woff2
                       -> ../assets/fonts/font-02.woff2
        inline: src/styles/inlined.css?inline
                resource: ~fixtures/images/pear.png
                       -> ../assets/img/pear.6b9b072a.png
                  inline: ~fixtures/images/icons/iphone.png
                  inline: ~fixtures/images/icons/imac.svg
                resource: ~fixtures/images/plum.png
                       -> ../assets/img/plum.d39e7174.png
         style: src/views/about/style.css
             -> ../css/style.bundle.2.css
                resource: ~fixtures/images/melon.png
                       -> ../assets/img/melon.a92cb911.png
                  inline: ~fixtures/images/token.svg
      resource: ~fixtures/images/fig.png
             -> ../assets/img/fig.c6809878.png
      resource: ~fixtures/images/responsive/hardware.webp?size=300
             -> ../assets/img/hardware-300w.webp
      resource: ~fixtures/images/responsive/hardware.webp?sizes[]=200&sizes[]=400
             -> ../assets/img/hardware-200w.webp 200w,../assets/img/hardware-400w.webp 400w
        script: src/views/about/about-split.js
             -> chunks:
                  - ../js/612.bundle.js
                  - ../js/about-split.bundle.js
        inline: src/views/about/about-inline-split.js?inline
                inline chunks:
                  - 544.bundle.js
                  - about-inline-split.bundle.js
        script: src/views/about/about.js
             -> ../js/about.bundle.js

"
`;

exports[`watchFiles output into console watchFiles.files 1`] = `
"
 html-bundler-webpack-plugin  Entry processing 

watch files:
  - src/index.html
  - src/style.css

 ENTRY  index.html 
source: src/index.html
output: dist/
assets:
         style: src/style.css
             -> assets/css/style.bundle.css
      resource: ~fixtures/images/apple.png
             -> assets/img/apple.02a7c382.png
        script: src/main.js
             -> assets/js/main.bundle.js

"
`;

exports[`watchFiles output into console watchFiles.ignore 1`] = `
"
 html-bundler-webpack-plugin  Entry processing 

watch files:
  - src/index.html
  - src/main.js

 ENTRY  index.html 
source: src/index.html
output: dist/
assets:
         style: src/style.css
             -> assets/css/style.bundle.css
      resource: ~fixtures/images/apple.png
             -> assets/img/apple.02a7c382.png
        script: src/main.js
             -> assets/js/main.bundle.js

"
`;

exports[`watchFiles output into console watchFiles.paths 1`] = `
"
 html-bundler-webpack-plugin  Entry processing 

watch files:
  - src/index.html
  - templates/footer.html

 ENTRY  index.html 
source: src/index.html
output: dist/
assets:
         style: src/style.css
             -> assets/css/style.bundle.css
      resource: ~fixtures/images/apple.png
             -> assets/img/apple.02a7c382.png
        script: src/main.js
             -> assets/js/main.bundle.js

"
`;
